# serializer version: 1
# name: test__get_muxer_info
  FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mp4', description='MP4 (MPEG-4 Part 14)', common_exts=['mp4'], mime_type='video/mp4', default_video_codec='h264', default_audio_codec='aac')
# ---
# name: test_get_ffmpeg_version[major]
  '4'
# ---
# name: test_get_ffmpeg_version[minor]
  '4.2'
# ---
# name: test_get_ffmpeg_version[patch]
  '4.2.2'
# ---
# name: test_list_support_format
  list([
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='3dostr', description='', common_exts=['str'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='3g2', description='', common_exts=['3g2'], mime_type='', default_video_codec='h263', default_audio_codec='amr_nb'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='3gp', description='', common_exts=['3gp'], mime_type='', default_video_codec='h263', default_audio_codec='amr_nb'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='4xm', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='a64', description='', common_exts=[], mime_type='', default_video_codec='a64_multi', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='aa', description='', common_exts=['aa'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='aac', description='', common_exts=['aac'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='aax', description='', common_exts=['aax'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ac3', description='', common_exts=['ac3'], mime_type='audio/x-ac3', default_video_codec='', default_audio_codec='ac3'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ace', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='acm', description='', common_exts=['acm'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='act', description='ACT Voice file format', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='adf', description='', common_exts=['adf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='adp', description='', common_exts=['adp', 'dtk'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ads', description='', common_exts=['ads', 'ss2'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='adts', description='', common_exts=['aac', 'adts'], mime_type='audio/aac', default_video_codec='', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='adx', description='', common_exts=['adx'], mime_type='', default_video_codec='', default_audio_codec='adpcm_adx'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='aea', description='', common_exts=['aea'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='afc', description='', common_exts=['afc'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='aiff', description='', common_exts=['aif', 'aiff', 'afc', 'aifc'], mime_type='audio/aiff', default_video_codec='png', default_audio_codec='pcm_s16be'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='aix', description='', common_exts=['aix'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='alaw', description='', common_exts=['al'], mime_type='', default_video_codec='', default_audio_codec='pcm_alaw'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='alias_pix', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='alp', description='', common_exts=['tun', 'pcm'], mime_type='', default_video_codec='', default_audio_codec='adpcm_ima_alp'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='amr', description='', common_exts=['amr'], mime_type='audio/amr', default_video_codec='', default_audio_codec='amr_nb'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='amrnb', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='amrwb', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='amv', description='', common_exts=['amv'], mime_type='video/amv', default_video_codec='amv', default_audio_codec='adpcm_ima_amv'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='anm', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='apac', description='', common_exts=['apc'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='apc', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ape', description='', common_exts=['ape', 'apl', 'mac'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='apm', description='', common_exts=['apm'], mime_type='', default_video_codec='', default_audio_codec='adpcm_ima_apm'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='apng', description='', common_exts=['apng'], mime_type='image/png', default_video_codec='apng', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='aptx', description='', common_exts=['aptx'], mime_type='', default_video_codec='', default_audio_codec='aptx'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='aptx_hd', description='', common_exts=['aptxhd'], mime_type='', default_video_codec='', default_audio_codec='aptx_hd'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='aqtitle', description='', common_exts=['aqt'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='argo_asf', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='adpcm_argo'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='argo_brp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='argo_cvg', description='', common_exts=['cvg'], mime_type='', default_video_codec='', default_audio_codec='adpcm_psx'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='asf', description='', common_exts=['asf', 'wmv', 'wma'], mime_type='video/x-ms-asf', default_video_codec='msmpeg4v3', default_audio_codec='wmav2'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='asf_o', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='asf_stream', description='', common_exts=['asf', 'wmv', 'wma'], mime_type='video/x-ms-asf', default_video_codec='msmpeg4v3', default_audio_codec='wmav2'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ass', description='', common_exts=['ass', 'ssa'], mime_type='text/x-ass', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ast', description='', common_exts=['ast'], mime_type='', default_video_codec='', default_audio_codec='pcm_s16be_planar'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='au', description='', common_exts=['au'], mime_type='audio/basic', default_video_codec='', default_audio_codec='pcm_s16be'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='av1', description='', common_exts=['obu'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='avi', description='', common_exts=['avi'], mime_type='video/x-msvideo', default_video_codec='mpeg4', default_audio_codec='mp3'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='avif', description='', common_exts=['avif'], mime_type='image/avif', default_video_codec='av1', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='avm2', description='', common_exts=[], mime_type='application/x-shockwave-flash', default_video_codec='flv1', default_audio_codec='mp3'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='avr', description='', common_exts=['avr'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='avs', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='avs2', description='', common_exts=['avs', 'avs2'], mime_type='', default_video_codec='avs2', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='avs3', description='', common_exts=['avs3'], mime_type='', default_video_codec='avs3', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bethsoftvid', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bfi', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bfstm', description='', common_exts=['bfstm', 'bcstm'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bin', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bink', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='binka', description='', common_exts=['binka'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='bit', description='', common_exts=['bit'], mime_type='audio/bit', default_video_codec='', default_audio_codec='g729'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bitpacked', description='', common_exts=['bitpacked'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bmp_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bmv', description='', common_exts=['bmv'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='boa', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='bonk', description='', common_exts=['bonk'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='brender_pix', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='brstm', description='', common_exts=['brstm'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='c93', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='caf', description='', common_exts=['caf'], mime_type='audio/x-caf', default_video_codec='', default_audio_codec='pcm_s16be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='cavsvideo', description='', common_exts=['avs'], mime_type='', default_video_codec='cavs', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='cdg', description='', common_exts=['cdg'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='cdxl', description='', common_exts=['cdxl', 'xl'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='cine', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='codec2', description='', common_exts=['c2'], mime_type='', default_video_codec='', default_audio_codec='codec2'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='codec2raw', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='codec2'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='concat', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='crc', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='cri_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='dash', description='', common_exts=['mpd'], mime_type='', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='data', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='daud', description='', common_exts=['302', 'daud'], mime_type='', default_video_codec='', default_audio_codec='pcm_s24daud'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dcstr', description='', common_exts=['str'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dds_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='derf', description='', common_exts=['adp'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dfa', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='dfpwm', description='', common_exts=['dfpwm'], mime_type='', default_video_codec='', default_audio_codec='dfpwm'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dhav', description='', common_exts=['dav'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='dirac', description='', common_exts=['drc', 'vc2'], mime_type='', default_video_codec='dirac', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='dnxhd', description='', common_exts=['dnxhd', 'dnxhr'], mime_type='', default_video_codec='dnxhd', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dpx_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dsf', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dsicin', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dss', description='', common_exts=['dss'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='dts', description='', common_exts=['dts'], mime_type='audio/x-dca', default_video_codec='', default_audio_codec='dts'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dtshd', description='', common_exts=['dtshd'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='dv', description='', common_exts=['dv', 'dif'], mime_type='', default_video_codec='dvvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dvbsub', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dvbtxt', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='dvd', description='', common_exts=['dvd'], mime_type='video/mpeg', default_video_codec='mpeg2video', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='dxa', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ea', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ea_cdata', description='', common_exts=['cdata'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='eac3', description='', common_exts=['eac3', 'ec3'], mime_type='audio/x-eac3', default_video_codec='', default_audio_codec='eac3'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='epaf', description='', common_exts=['paf', 'fap'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='exr_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='f32be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_f32be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='f32le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_f32le'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='f4v', description='', common_exts=['f4v'], mime_type='application/f4v', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='f64be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_f64be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='f64le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_f64le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ffmetadata', description='', common_exts=['ffmeta'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='fifo', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='fifo_test', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='film_cpk', description='', common_exts=['cpk'], mime_type='', default_video_codec='cinepak', default_audio_codec='pcm_s16be_planar'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='filmstrip', description='', common_exts=['flm'], mime_type='', default_video_codec='rawvideo', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='fits', description='', common_exts=['fits'], mime_type='', default_video_codec='fits', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='flac', description='', common_exts=['flac'], mime_type='audio/x-flac', default_video_codec='png', default_audio_codec='flac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='flic', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='flv', description='', common_exts=['flv'], mime_type='video/x-flv', default_video_codec='flv1', default_audio_codec='mp3'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='framecrc', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='framehash', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='framemd5', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='frm', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='fsb', description='', common_exts=['fsb'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='fwse', description='', common_exts=['fwse'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='g722', description='', common_exts=['g722', '722'], mime_type='audio/G722', default_video_codec='', default_audio_codec='adpcm_g722'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='g723_1', description='', common_exts=['tco', 'rco', 'g723_1'], mime_type='audio/g723', default_video_codec='', default_audio_codec='g723_1'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='g726', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='adpcm_g726'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='g726le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='adpcm_g726le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='g729', description='', common_exts=['g729'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='gdv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='gem_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='genh', description='', common_exts=['genh'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='gif', description='', common_exts=['gif'], mime_type='image/gif', default_video_codec='gif', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='gif_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='gsm', description='', common_exts=['gsm'], mime_type='audio/x-gsm', default_video_codec='', default_audio_codec='gsm'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='gxf', description='', common_exts=['gxf'], mime_type='', default_video_codec='mpeg2video', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='h261', description='', common_exts=['h261'], mime_type='video/x-h261', default_video_codec='h261', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='h263', description='', common_exts=['h263'], mime_type='video/x-h263', default_video_codec='h263', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='h264', description='', common_exts=['h26l', 'h264', '264', 'avc'], mime_type='', default_video_codec='h264', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='hash', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='hca', description='', common_exts=['hca'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='hcom', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='hdr_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='hds', description='', common_exts=[], mime_type='', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='hevc', description='', common_exts=['hevc', 'h265', '265'], mime_type='', default_video_codec='hevc', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='hls', description='', common_exts=['m3u8'], mime_type='', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='hnm', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ico', description='', common_exts=['ico'], mime_type='image/vnd', default_video_codec='bmp', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='idcin', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='idf', description='', common_exts=['idf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='iff', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ifv', description='', common_exts=['ifv'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ilbc', description='', common_exts=['lbc'], mime_type='audio/iLBC', default_video_codec='', default_audio_codec='ilbc'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='image2', description='', common_exts=['bmp', 'dpx', 'exr', 'jls', 'jpeg', 'jpg', 'jxl', 'ljpg', 'pam', 'pbm', 'pcx', 'pfm', 'pgm', 'pgmyuv', 'phm', 'png', 'ppm', 'sgi', 'tga', 'tif', 'tiff', 'jp2', 'j2c', 'j2k', 'xwd', 'sun', 'ras', 'rs', 'im1', 'im8', 'im24', 'sunras', 'vbn', 'xbm', 'xface', 'pix', 'y', 'avif', 'qoi', 'hdr', 'wbmp'], mime_type='', default_video_codec='mjpeg', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='image2pipe', description='', common_exts=[], mime_type='', default_video_codec='mjpeg', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ingenient', description='', common_exts=['cgi'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ipmovie', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='ipod', description='', common_exts=['m4v', 'm4a', 'm4b'], mime_type='video/mp4', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ipu', description='', common_exts=['ipu'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ircam', description='', common_exts=['sf', 'ircam'], mime_type='', default_video_codec='', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='ismv', description='', common_exts=['ismv', 'isma'], mime_type='video/mp4', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='iss', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='iv8', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ivf', description='', common_exts=['ivf'], mime_type='', default_video_codec='vp8', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ivr', description='', common_exts=['ivr'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='j2k_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='jacosub', description='', common_exts=['jss', 'js'], mime_type='text/x-jacosub', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='jpeg_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='jpegls_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='jpegxl_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='jv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='kux', description='', common_exts=['kux'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='kvag', description='', common_exts=['vag'], mime_type='', default_video_codec='', default_audio_codec='adpcm_ima_ssi'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='laf', description='', common_exts=['laf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='latm', description='', common_exts=['latm', 'loas'], mime_type='audio/MP4A-LATM', default_video_codec='', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='lavfi', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='live_flv', description='', common_exts=['flv'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='lmlm4', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='loas', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='lrc', description='', common_exts=['lrc'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='luodat', description='', common_exts=['dat'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='lvf', description='', common_exts=['lvf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='lxf', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='m4v', description='', common_exts=['m4v'], mime_type='', default_video_codec='mpeg4', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='matroska', description='', common_exts=['mkv'], mime_type='video/x-matroska', default_video_codec='h264', default_audio_codec='vorbis'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='matroska,webm', description='', common_exts=['mkv', 'mk3d', 'mka', 'mks', 'webm'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mca', description='', common_exts=['mca'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mcc', description='', common_exts=['mcc'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='md5', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mgsts', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='microdvd', description='', common_exts=['sub'], mime_type='text/x-microdvd', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mjpeg', description='', common_exts=['mjpg', 'mjpeg', 'mpo'], mime_type='video/x-mjpeg', default_video_codec='mjpeg', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mjpeg_2000', description='', common_exts=['j2k'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mkvtimestamp_v2', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mlp', description='', common_exts=['mlp'], mime_type='', default_video_codec='', default_audio_codec='mlp'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mlv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mm', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mmf', description='', common_exts=['mmf'], mime_type='application/vnd', default_video_codec='', default_audio_codec='adpcm_yamaha'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mods', description='', common_exts=['mods'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='moflex', description='', common_exts=['moflex'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mov', description='', common_exts=['mov'], mime_type='', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mov,mp4,m4a,3gp,3g2,mj2', description='', common_exts=['mov', 'mp4', 'm4a', '3gp', '3g2', 'mj2', 'psp', 'm4b', 'ism', 'ismv', 'isma', 'f4v', 'avif'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mp2', description='', common_exts=['mp2', 'm2a', 'mpa'], mime_type='audio/mpeg', default_video_codec='', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mp3', description='', common_exts=['mp2', 'mp3', 'm2a', 'mpa'], mime_type='audio/mpeg', default_video_codec='png', default_audio_codec='mp3'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mp4', description='', common_exts=['mp4'], mime_type='video/mp4', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mpc', description='', common_exts=['mpc'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mpc8', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mpeg', description='', common_exts=['mpg', 'mpeg'], mime_type='video/mpeg', default_video_codec='mpeg1video', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mpeg1video', description='', common_exts=['mpg', 'mpeg', 'm1v'], mime_type='video/mpeg', default_video_codec='mpeg1video', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mpeg2video', description='', common_exts=['m2v'], mime_type='', default_video_codec='mpeg2video', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mpegts', description='', common_exts=['ts', 'm2t', 'm2ts', 'mts'], mime_type='video/MP2T', default_video_codec='mpeg2video', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mpegtsraw', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mpegvideo', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mpjpeg', description='', common_exts=['mjpg'], mime_type='multipart/x-mixed-replace', default_video_codec='mjpeg', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mpl2', description='', common_exts=['txt', 'mpl2'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mpsub', description='', common_exts=['sub'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='msf', description='', common_exts=['msf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='msnwctcp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='msp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mtaf', description='', common_exts=['mtaf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mtv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mulaw', description='', common_exts=['ul'], mime_type='', default_video_codec='', default_audio_codec='pcm_mulaw'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='musx', description='', common_exts=['musx'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mvi', description='', common_exts=['mvi'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='mxf', description='', common_exts=['mxf'], mime_type='application/mxf', default_video_codec='mpeg2video', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mxf_d10', description='', common_exts=[], mime_type='application/mxf', default_video_codec='mpeg2video', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='mxf_opatom', description='', common_exts=['mxf'], mime_type='application/mxf', default_video_codec='dnxhd', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='mxg', description='', common_exts=['mxg'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='nc', description='', common_exts=['v'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='nistsphere', description='', common_exts=['nist', 'sph'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='nsp', description='', common_exts=['nsp'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='nsv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='null', description='', common_exts=[], mime_type='', default_video_codec='wrapped_avframe', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='nut', description='', common_exts=['nut'], mime_type='video/x-nut', default_video_codec='mpeg4', default_audio_codec='vorbis'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='nuv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='obu', description='', common_exts=['obu'], mime_type='', default_video_codec='av1', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='oga', description='', common_exts=['oga'], mime_type='audio/ogg', default_video_codec='', default_audio_codec='flac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='ogg', description='', common_exts=['ogg'], mime_type='application/ogg', default_video_codec='theora', default_audio_codec='vorbis'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='ogv', description='', common_exts=['ogv'], mime_type='video/ogg', default_video_codec='theora', default_audio_codec='vorbis'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='oma', description='', common_exts=['oma', 'omg', 'aa3'], mime_type='audio/x-oma', default_video_codec='', default_audio_codec='atrac3'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='opus', description='', common_exts=['opus'], mime_type='audio/ogg', default_video_codec='', default_audio_codec='opus'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='paf', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pam_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pbm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pcx_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pfm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pgm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pgmyuv_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pgx_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='phm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='photocd_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pictor_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pjs', description='', common_exts=['pjs'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pmp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='png_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pp_bnk', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ppm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='psd_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='psp', description='', common_exts=['mp4', 'psp'], mime_type='', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='psxstr', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pva', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='pvf', description='', common_exts=['pvf'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='qcp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='qdraw_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='qoi_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='r3d', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='rawvideo', description='', common_exts=['yuv', 'cif', 'qcif', 'rgb'], mime_type='', default_video_codec='rawvideo', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='realtext', description='', common_exts=['rt'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='redspark', description='', common_exts=['rsd'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='rka', description='', common_exts=['rka'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='rl2', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='rm', description='', common_exts=['rm', 'ra'], mime_type='application/vnd', default_video_codec='rv10', default_audio_codec='ac3'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='roq', description='', common_exts=['roq'], mime_type='', default_video_codec='roq', default_audio_codec='roq_dpcm'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='rpl', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='rsd', description='', common_exts=['rsd'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='rso', description='', common_exts=['rso'], mime_type='', default_video_codec='', default_audio_codec='pcm_u8'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='rtp', description='', common_exts=[], mime_type='', default_video_codec='mpeg4', default_audio_codec='pcm_mulaw'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='rtp_mpegts', description='', common_exts=[], mime_type='', default_video_codec='mpeg4', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='rtsp', description='', common_exts=[], mime_type='', default_video_codec='mpeg4', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s16be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_s16be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s16le', description='', common_exts=['sw'], mime_type='', default_video_codec='', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s24be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_s24be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s24le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_s24le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s32be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_s32be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s32le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_s32le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='s337m', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='s8', description='', common_exts=['sb'], mime_type='', default_video_codec='', default_audio_codec='pcm_s8'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sami', description='', common_exts=['smi', 'sami'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='sap', description='', common_exts=[], mime_type='', default_video_codec='mpeg4', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='sbc', description='', common_exts=['sbc', 'msbc'], mime_type='audio/x-sbc', default_video_codec='', default_audio_codec='sbc'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sbg', description='', common_exts=['sbg'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='scc', description='', common_exts=['scc'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='scd', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sdns', description='', common_exts=['sdns'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sdp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sdr2', description='', common_exts=['sdr2'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sds', description='', common_exts=['sds'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sdx', description='', common_exts=['sdx'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='segment', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ser', description='', common_exts=['ser'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sga', description='', common_exts=['sga'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sgi_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='shn', description='', common_exts=['shn'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='siff', description='', common_exts=['vb', 'son'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='simbiosis_imx', description='', common_exts=['imx'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sln', description='', common_exts=['sln'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='smjpeg', description='', common_exts=['mjpg'], mime_type='', default_video_codec='mjpeg', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='smk', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='smoothstreaming', description='', common_exts=[], mime_type='', default_video_codec='h264', default_audio_codec='aac'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='smush', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sol', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='sox', description='', common_exts=['sox'], mime_type='', default_video_codec='', default_audio_codec='pcm_s32le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='spdif', description='', common_exts=['spdif'], mime_type='', default_video_codec='', default_audio_codec='ac3'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='spx', description='', common_exts=['spx'], mime_type='audio/ogg', default_video_codec='', default_audio_codec='speex'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='srt', description='', common_exts=['srt'], mime_type='application/x-subrip', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='stl', description='', common_exts=['stl'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='stream_segment,ssegment', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='streamhash', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='subviewer', description='', common_exts=['sub'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='subviewer1', description='', common_exts=['sub'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='sunrast_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='sup', description='', common_exts=['sup'], mime_type='application/x-pgs', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='svag', description='', common_exts=['svag'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='svcd', description='', common_exts=['vob'], mime_type='video/mpeg', default_video_codec='mpeg2video', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='svg_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='svs', description='', common_exts=['svs'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='swf', description='', common_exts=['swf'], mime_type='application/x-shockwave-flash', default_video_codec='flv1', default_audio_codec='mp3'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='tak', description='', common_exts=['tak'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='tedcaptions', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='tee', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='thp', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='tiertexseq', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='tiff_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='tmv', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='truehd', description='', common_exts=['thd'], mime_type='', default_video_codec='', default_audio_codec='truehd'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='tta', description='', common_exts=['tta'], mime_type='audio/x-tta', default_video_codec='', default_audio_codec='tta'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='ttml', description='', common_exts=['ttml'], mime_type='text/ttml', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='tty', description='', common_exts=['ans', 'art', 'asc', 'diz', 'ice', 'nfo', 'txt', 'vt'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='txd', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='ty', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u16be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_u16be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u16le', description='', common_exts=['uw'], mime_type='', default_video_codec='', default_audio_codec='pcm_u16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u24be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_u24be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u24le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_u24le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u32be', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_u32be'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u32le', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_u32le'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='u8', description='', common_exts=['ub'], mime_type='', default_video_codec='', default_audio_codec='pcm_u8'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='uncodedframecrc', description='', common_exts=[], mime_type='', default_video_codec='rawvideo', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='v210', description='', common_exts=['v210'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='v210x', description='', common_exts=['yuv10'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vag', description='', common_exts=['vag'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vbn_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='vc1', description='', common_exts=['vc1'], mime_type='', default_video_codec='vc1', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='vc1test', description='', common_exts=['rcv'], mime_type='', default_video_codec='wmv3', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='vcd', description='', common_exts=[], mime_type='video/mpeg', default_video_codec='mpeg1video', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='vidc', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec='pcm_vidc'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vividas', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vivo', description='', common_exts=['viv'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vmd', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='vob', description='', common_exts=['vob'], mime_type='video/mpeg', default_video_codec='mpeg2video', default_audio_codec='mp2'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vobsub', description='', common_exts=['idx'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='voc', description='', common_exts=['voc'], mime_type='audio/x-voc', default_video_codec='', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vpk', description='', common_exts=['vpk'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vplayer', description='', common_exts=['txt'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='vqf', description='', common_exts=['vqf', 'vql', 'vqe'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='w64', description='', common_exts=['w64'], mime_type='', default_video_codec='', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='wady', description='', common_exts=['way'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='wav', description='', common_exts=['wav'], mime_type='audio/x-wav', default_video_codec='', default_audio_codec='pcm_s16le'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='wavarc', description='', common_exts=['wa'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='wc3movie', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='webm', description='', common_exts=['webm'], mime_type='video/webm', default_video_codec='vp9', default_audio_codec='opus'),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='webm_chunk', description='', common_exts=['chk'], mime_type='video/webm', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='webm_dash_manifest', description='', common_exts=['xml'], mime_type='application/xml', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=False, muxing_support=True, codec='webp', description='', common_exts=['webp'], mime_type='', default_video_codec='webp', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='webp_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='webvtt', description='', common_exts=['vtt'], mime_type='text/vtt', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='wsaud', description='', common_exts=['aud'], mime_type='', default_video_codec='', default_audio_codec='adpcm_ima_ws'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='wsd', description='', common_exts=['wsd'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='wsvqa', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='wtv', description='', common_exts=['wtv'], mime_type='', default_video_codec='mpeg2video', default_audio_codec='ac3'),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='wv', description='', common_exts=['wv'], mime_type='audio/x-wavpack', default_video_codec='', default_audio_codec='wavpack'),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='wve', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='x11grab', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xa', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xbin', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xbm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xmd', description='', common_exts=['xmd'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xmv', description='', common_exts=['xmv'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xpm_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xvag', description='', common_exts=['xvag'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xwd_pipe', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='xwma', description='', common_exts=[], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=False, codec='yop', description='', common_exts=['yop'], mime_type='', default_video_codec='', default_audio_codec=''),
    FFMpegSupport(demuxing_support=True, muxing_support=True, codec='yuv4mpegpipe', description='', common_exts=['y4m'], mime_type='', default_video_codec='wrapped_avframe', default_audio_codec=''),
  ])
# ---
